// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Toast Component correctly 1`] = `
<div
  className="sc-kgoBCf kijmjx sc-bwzfXH kVOBrb"
>
  <div
    className="sc-kGXeez kncIYh sc-bwzfXH jcVliq"
    color="success"
  >
    <i
      className="material-icons  sc-ifAKCX cKhEfU"
      color="white"
      onClick={undefined}
      scale="l"
    >
      check_circle
    </i>
  </div>
  <div
    className="sc-kpOJdX fvsAUn sc-bwzfXH jlncrv"
  >
    Text
  </div>
  <div
    className="sc-dxgOiQ hCMPDu sc-bwzfXH bBFwoB"
  >
    <div
      className="sc-ckVGcZ bOuxcx"
    >
      <i
        className="material-icons  sc-ifAKCX fpvHwA"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;

exports[`renders the Toast Component correctly 2`] = `
<div
  className="sc-kgoBCf kijmjx sc-bwzfXH kVOBrb"
>
  <div
    className="sc-kGXeez felQvN sc-bwzfXH jcVliq"
    color="error"
  >
    <i
      className="material-icons  sc-ifAKCX cKhEfU"
      color="white"
      onClick={undefined}
      scale="l"
    >
      error_outline
    </i>
  </div>
  <div
    className="sc-kpOJdX fvsAUn sc-bwzfXH jlncrv"
  >
    <button>
      Test
    </button>
  </div>
  <div
    className="sc-dxgOiQ hCMPDu sc-bwzfXH bBFwoB"
  >
    <div
      className="sc-ckVGcZ bOuxcx"
    >
      <i
        className="material-icons  sc-ifAKCX fpvHwA"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;
